k8s/fdfs.yaml
#apiVersion: v1
#kind: PersistentVolumeClaim
#metadata:
#  annotations:
#    volume.beta.kubernetes.io/storage-provisioner: bill-jc.com/nfs
#  name: pvc-gitlab
#spec:
#  accessModes:
#  - ReadWriteOnce
#  resources:
#    requests:
#      storage: 1Gi
#  storageClassName: managed-nfs-storage

---
apiVersion: v1
kind: Service
metadata:
  name: fdfs-tracker
spec:
  ports:
  - name: tracker
    port: 22122
    protocol: TCP
    targetPort: 22122
  selector:
    app: fdfs-tracker  

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fdfs-tracker
  name: fdfs-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fdfs-tracker
  template:
    metadata:
      labels:
        app: fdfs-tracker
    spec:
      containers:
      - name: tracker
        image: harbor.billjc.com/wolong/fdfs:5.10
        imagePullPolicy: Always
        stdin: true
        tty: true
        command:
        - /bin/bash
        - -c
        - fdfs_trackerd /opt/conf/tracker.conf start && /bin/sh
        volumeMounts:
        - name: conf
          mountPath: /opt/conf
        - name: data
          mountPath: /opt/tracker
      volumes:
      - name: conf
        configMap:
          name: fdfs-config
      - name: data
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: fdfs-storage
spec:
  ports:
  - name: storage
    port: 23000
    protocol: TCP
    targetPort: 23000
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fdfs-storage
  clusterIP: None
  type: ClusterIP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fdfs-storage
  labels:
    app: fdfs-storage
spec:
  serviceName: fdfs-storage
  replicas: 2
  selector:
    matchLabels:
      app: fdfs-storage
  template:
    metadata:
      labels:
        app: fdfs-storage
    spec:
      containers:
      - name: storage
        image: harbor.billjc.com/wolong/fdfs:5.10
        imagePullPolicy: Always
        stdin: true
        tty: true
        command:
        - /bin/bash
        - -c
        - fdfs_storaged /opt/conf/storage.conf start && nginx -g 'daemon off;'
        volumeMounts:
        - name: conf
          mountPath: /opt/conf
        - name: data
          mountPath: /opt/storage/data
      volumes:
      - name: conf
        configMap:
          name: fdfs-config
#      - name: data
#        emptyDir: {}
# FEATURE:PERSISTENT
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
      storageClassName: nfs-client
# FEATURE:WITHOUT PERSISTENT

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fdfs-web
spec:
  rules:
  - host: fdfs.hrsaas.billjc.com
    http:
      paths:
      - backend:
          serviceName: fdfs-storage
          servicePort: 8080
        path: /


---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fdfs-client
  name: fdfs-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fdfs-client
  template:
    metadata:
      labels:
        app: fdfs-client
    spec:
      containers:
      - name: client
        image: harbor.billjc.com/wolong/fdfs:5.10
        imagePullPolicy: Always
        stdin: true
        tty: true
        command:
        - /bin/sh
        volumeMounts:
        - name: conf
          mountPath: /opt/conf
      volumes:
      - name: conf
        configMap:
          name: fdfs-config
          items:
          - key: client.conf
            path: client.conf
